# Snake_AI

Snake_AI/: CMakeLists.txt
Snake_AI/Snake_AI/: AI.cpp  Classes.cpp  Classes.h  Defs.h  Game.cpp  Game.h  Main.cpp  Snake_AI.aps  Snake_AI.rc  resource.h  tec
Snake_AI/VS_stuff/: Snake_AI.sln  Snake_AI.sln.DotSettings  Snake_AI.vcxproj  Snake_AI.vcxproj.filters
